--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
 <head>
     <meta charset="utf-8" />
     <title>Portfolio</title>
+    <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-    <header>
-        <h1>Blank Page</h1>
-    </header>
+    <nav>
+        <ul class="navigation-items">
+            <li class="navigation-item"><a href="#">Home</a></li>
+            <li class="navigation-item"><a href="#">Projects</a></li>
+            <li class="navigation-item"><a href="#">Resume</a></li>
+            <li class="navigation-item"><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Daniel Hunter</h1>
+        <h2>Full Stack Developer</h2>
+    </main>
 </body>
 </html>
