--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
             <li class="navigation-item"><a href="#">Home</a></li>
             <li class="navigation-item"><a href="#">Projects</a></li>
             <li class="navigation-item"><a href="#">Resume</a></li>
-            <li class="navigation-item"><a href="#">Contact</a></li>
+            <li class="navigation-item" href="#">Contact</li>
         </ul>
     </nav>
     <main>
-        <h1>Daniel Hunter</h1>
-        <h2>Full Stack Developer</h2>
+        <div class="header-text">
+            <h1>Daniel Hunter</h1>
+            <h2>Full Stack Developer</h2>
+        </div>
     </main>
 </body>
 </html>
