--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
             <li class="navigation-item"><a href="#">Home</a></li>
             <li class="navigation-item"><a href="#">Projects</a></li>
             <li class="navigation-item"><a href="#">Resume</a></li>
-            <li class="navigation-item" href="#">Contact</li>
+            <li class="navigation-item"><a href="#">Contact</a></li>
         </ul>
     </nav>
-    <main>
+    <div class="top">
         <div class="header-text">
             <h1>Daniel Hunter</h1>
             <h2>Full Stack Developer</h2>
         </div>
-    </main>
+    </div>
+    <div class="about">
+        <h1>About Me</h1>
+    </div>
 </body>
 </html>
