--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
     </div>
     <div class="about">
         <h1>About Me</h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+            ut labore et dolore magna aliqua. In hendrerit gravida rutrum quisque non. Condimentum id 
+            venenatis a condimentum. Rhoncus aenean vel elit scelerisque. Mauris a diam maecenas sed 
+            enim ut sem viverra aliquet. Cursus turpis massa tincidunt dui ut ornare lectus. Donec ultrices 
+            tincidunt arcu non. Lobortis mattis aliquam faucibus purus in massa tempor nec. Morbi enim nunc 
+            faucibus a pellentesque sit amet. In hendrerit gravida rutrum quisque non tellus orci ac auctor. 
+            Id diam maecenas ultricies mi eget mauris pharetra et. A arcu cursus vitae congue mauris rhoncus. 
+            Nec sagittis aliquam malesuada bibendum arcu. Urna condimentum mattis pellentesque id nibh tortor.
+        </p>
     </div>
 </body>
 </html>
